# ntqr_allotment

./: .gitignore  PUBLICATION_PACKAGE.md  README.md  pyproject.toml
audits/: claim_method_audit.md
manuscript/: 00_abstract.md  01_introduction.md  02_methods.md  03_results.md  04_discussion.md  99_references.md  config.yaml
output/: manuscript_variables.json
output/data/: alarm_timings.csv  analytical_predictions.json  bloc_concentration.csv  bloc_phase.csv  bloc_phase_summary.json  cover_manifest.json  cross_family_multiseed.json  cross_family_results.json  independence_sweep.csv  persona_results.json  persona_votes_j0_qwen2.5-3b-0.6.json  persona_votes_j1_gemma3-4b-0.6.json  persona_votes_j2_qwen2.5-3b-1.0.json  persona_votes_ollama_qwen2.5-3b.json  postdoc_panel_alignment.json  postdoc_panel_results.json  power_analysis.csv  stego_manifest.json  sweep_aggregated.csv
output/manuscript/: 00_abstract.md  01_introduction.md  02_methods.md  03_results.md  04_discussion.md  config.yaml  preamble.md
output/pdf/: _combined_manuscript.aux  _combined_manuscript.bbl  (+5 more)
scripts/: bench_alarm.py  make_cover.py  make_extended_figures.py  make_figures.py  make_stego_pdf.py  make_web_explorer.py  run_analytical_predictions.py  run_bloc_phase.py  run_cross_family.py  run_cross_family_multiseed.py  run_independence_sweep.py  run_personas.py  run_postdoc_panel.py  run_power_analysis.py  run_sweep.py  run_trio_conditioning.py  verify_stego.py  z_generate_manuscript_variables.py
tests/: test_artifact_metadata.py  test_bloc_confound.py  test_claim_contracts.py  test_config.py  test_contrast_analysis.py  test_cover.py  test_cross_family.py  test_cross_family_artifacts.py  test_dependence.py  test_determinism.py  test_ensemble.py  test_experts.py  test_fairness.py  test_figures.py  test_independence_sweep.py  test_manuscript_variables.py  test_ntqr_eval.py  test_personas.py  test_pipeline.py  test_postdoc_panel.py  test_power_analysis.py  test_power_study.py  test_sortition.py  test_statistics_analysis.py  test_stego.py  test_sweeps.py  test_ternary.py  test_theory.py  test_trio_conditioning.py  test_web_explorer.py
(+81 files in other folders)
